# time-manager

./: .gitignore  Makefile  README.md  pyproject.toml  timer.spec
scripts/: publish.sh
src/: app.py
src/cli/: __init__.py  cli.py
src/core/: formatting.py  termclock.py
src/tui/: __init__.py  countdown.py  stopwatch.py  theme.py  theme.tcss  tui.py
