[project]
name = "timer"
version = "0.2.3"
description = "A CLI based timer using Textual"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=6.11.0",
    "textual-dev>=1.8.0",
    "typer>=0.21.0",
]

[project.scripts]
timer = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app.py", "src/tui", "src/core", "src/cli"]
include = ["src/tui/theme.tcss"]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
